Modified BasicParser and BasicLexer to implement the syntax language of WACC. Also setup directory structure for cleaner repo + setup script file to run the compiler [rp519]

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 #ignore generated binary files and auto-generated ANTLR code
 bin
 src/antlr
+gen/
+
+# ignore ide generated files
+.idea
+out
+*.iml
 
 #ignore Java class files
 *.class
