completely restructured project to maven based build, for better deployment and testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 #ignore generated binary files and auto-generated ANTLR code
-bin/
-src/antlr
-gen/
-rules
+target/
 *.tokens
 
 # ignore ide generated files
