--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,20 @@
     <build>
 
         <plugins>
+		<plugin>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <executions>
+		      <execution>
+			<phase>install</phase>
+			<goals>
+			  <goal>copy-dependencies</goal>
+			</goals>
+			<configuration>
+			  <outputDirectory>${project.build.directory}/lib</outputDirectory>
+			</configuration>
+		      </execution>
+		    </executions>
+		  </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -46,7 +60,7 @@
                             <goal>antlr4</goal>
                         </goals>
                         <configuration>
-                            <listener>true</listener>
+                            <listener>false</listener>
                             <visitor>true</visitor>
                         </configuration></execution>
                 </executions>
